Fix: header's nav style on mobile

--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -170,7 +170,6 @@ header {
   z-index: 10;
   width: 100%;
   left: 0;
-  color: white;
   @include transition;
 
   .service-links {
@@ -189,6 +188,7 @@ header {
     margin-top: .5rem;
     display: inline-block;
     font-size: 1.2rem;
+    color: white;
   }
 
   .menu-details {
@@ -291,6 +291,10 @@ header {
   &.expanded {
     background-color: white;
     color: #333333;
+
+    #menu_icon {
+      color: #333333;
+    }
 
     .menu-details {
       max-height: 30rem;
